move images to img path

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@ body {
 </style>
 
 <body>
-<img id="background_img" class="hidden_img" src="parchment.jpg" />
-<img id="footprint_human_R" class="hidden_img" src="footprint_human_R.png" />
-<img id="footprint_human_L" class="hidden_img" src="footprint_human_L.png" />
-<img id="footprint_bare_R" class="hidden_img" src="footprint_bare_R.png" />
-<img id="footprint_bare_L" class="hidden_img" src="footprint_bare_L.png" />
-<img id="footprint_boot_R" class="hidden_img" src="footprint_boot_R.png" />
-<img id="footprint_boot_L" class="hidden_img" src="footprint_boot_L.png" />
-<img id="footprint_demon_R" class="hidden_img" src="footprint_demon_R.png" />
-<img id="footprint_demon_L" class="hidden_img" src="footprint_demon_L.png" />
-<img id="footprint_bird_R" class="hidden_img" src="footprint_bird_R.png" />
-<img id="footprint_bird_L" class="hidden_img" src="footprint_bird_L.png" />
+<img id="background_img" class="hidden_img" src="img/parchment.jpg" />
+<img id="footprint_human_R" class="hidden_img" src="img/footprint_human_R.png" />
+<img id="footprint_human_L" class="hidden_img" src="img/footprint_human_L.png" />
+<img id="footprint_bare_R" class="hidden_img" src="img/footprint_bare_R.png" />
+<img id="footprint_bare_L" class="hidden_img" src="img/footprint_bare_L.png" />
+<img id="footprint_boot_R" class="hidden_img" src="img/footprint_boot_R.png" />
+<img id="footprint_boot_L" class="hidden_img" src="img/footprint_boot_L.png" />
+<img id="footprint_demon_R" class="hidden_img" src="img/footprint_demon_R.png" />
+<img id="footprint_demon_L" class="hidden_img" src="img/footprint_demon_L.png" />
+<img id="footprint_bird_R" class="hidden_img" src="img/footprint_bird_R.png" />
+<img id="footprint_bird_L" class="hidden_img" src="img/footprint_bird_L.png" />
 <canvas id="myCanvas"></canvas>
 </body>
 
